--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1> Hello world </h1>
 
-<h2> My first change.</h2>
+<p> Some paragraph for the first HTML lesson. </p>
 
-<h3> second test hhh</h3>
+<img src="img.jpg" alt="alternative text">
 
-<h3> third test</h3> 
+<a href="https://developer.mozilla.org/en-US/" target="_blank"> Open the MDN page</a>
