--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
-<h1> Hello world </h1>
+<DOCTYPE html>
+<head> 
+<meta charset="utf-8">
+</head>
 
-<p> Some paragraph for the first HTML lesson. </p>
+<body>
+	<h1> Hello world </h1>
 
-<img src="img.jpg" alt="alternative text">
+	<p> Some paragraph for the first HTML lesson. </p>
 
-<a href="https://developer.mozilla.org/en-US/" target="_blank"> Open the MDN page</a>
+	<img src="img.jpg" alt="alternative text">
+
+	<a href="https://developer.mozilla.org/en-US/" target="_blank"> Open the MDN page</a>
+</body>  
