--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <DOCTYPE html>
 <head> 
-<meta charset="utf-8">
+	<meta charset="utf-8">
+	<title> Roy's Site</title>
 </head>
 
 <body>
+<!--  -->
 	<h1> Hello world </h1>
 
 	<p> Some paragraph for the first HTML lesson. </p>
@@ -11,4 +13,44 @@
 	<img src="img.jpg" alt="alternative text">
 
 	<a href="https://developer.mozilla.org/en-US/" target="_blank"> Open the MDN page</a>
+
+	<br/><br/>
+
+	<table border="1">
+		<caption>Practice Table</caption>
+
+		<thead>
+			<tr>
+				<th></th>
+				<th scope="col">Title 1</th>
+				<th scope="col">Title 2</th>
+				<th scope="col">Title 3</th>
+			</tr>
+		</thead>
+		
+		<tbody>
+			<tr>
+				<th rowspan="2" scope="row">SubTitle 1</th>
+				<td>1</td>
+				<td>1</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<!-- Taken by Title -->
+				<td>2</td>
+				<td>2</td>
+				<td>2</td>
+			</tr>
+		</tbody>
+
+		<tfoot>
+			<tr>
+				<td colspan="2"></td>
+				<td>total: </td>
+				<td>3</td>
+			</tr>
+		</tfoot>
+	</table>
+
+
 </body>  
