I added the form to the html of exercise 1 after we learned about forms in lesson 5

--- a/exercises/DevShots/index.html
+++ b/exercises/DevShots/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <head></head>
 
 <body>
@@ -86,6 +86,42 @@
 		<li>From the train station: 141, 42</li>
 		<li>From the central station: 163, 201, 96</li>
 	</ol>
+
+	
+	<!-- added later in class, after we learned about forms -->
+	<h6>Sign up</h6>
+	<p>Entrance is free, but the number of attendants is limited</p>
+
+	<form action="https://google.com">
+		<div>
+			<label for="full_name">Full Name</label>		
+			<input type="text" name="full_name" id="full_name" placeholder="first and last name">
+		</div>
+
+		<div>
+			<label for="job_title">Job Title</label>		
+			<input type="text" name="job_title" id="job_title" placeholder="What you do">
+		</div>
+
+		<div>
+			<label for="organization">Organization</label>		
+			<input type="text" name="organization" id="organization" placeholder="who pays your salary">
+		</div>
+
+		<div>
+			<label for="telephone">Telephone Number</label>		
+			<input type="text" name="telephone" id="telephone" placeholder="or cell number">
+		</div>
+
+		<div>
+			<label for="friends">Any Friends</label>		
+			<input type="text" name="friends" id="friends" placeholder="first and last name">
+		</div>
+
+		<button type="submit">Finished! Send me</button>
+
+	</form>
+
 
 	<h5>Useful Information</h5>
 
