Added semantic tags to the first exercise

--- a/exercises/DevShots/index.html
+++ b/exercises/DevShots/index.html
@@ -3,196 +3,213 @@
 
 <body>
 	
-	<h1>DEV SHOTS</h1>
-	<img src="logo.gif" alt="netcraft logo" title="netcraft logo" width="100" height="20">
 
-	<h2>Developer's Function</h2>
-	<p>Talking about Technologies ...</p>
+	<header>
+		<h1>DEV SHOTS</h1>
+		<img src="logo.gif" alt="netcraft logo" title="netcraft logo" width="100" height="20">
 
-	<!-- Title for the following list -->
-	<h3> Navigation</h3> 
-	
-	<ul>
-		<li>What is this</li>	
-		<li>Lectures</li>
-		<li>Parking</li>
-		<li>Sign Up</li>
-		<li>Useful Information</li>
-		<li>About us</li>
-	</ul>
+		<h2>Developer's Function</h2>
+		<p>Talking about Technologies ...</p>
 
-	<h5>6 useful and fascinating lectures</h5>
-	<img src="clock.gif" alt="clock" title="clock" width="15" height="15">
-	15 minutes per lecture
+		<!-- Title for the following list -->
+		<h3> Navigation</h3> 
+		
+		<ul>
+			<li>What is this</li>	
+			<li>Lectures</li>
+			<li>Parking</li>
+			<li>Sign Up</li>
+			<li>Useful Information</li>
+			<li>About us</li>
+		</ul>
+	</header>
 
-	<br>
+	<main>
+		<section>
+			<h3>6 useful and fascinating lectures</h3>
+			<img src="clock.gif" alt="clock" title="clock" width="15" height="15">
+			15 minutes per lecture
 
-	<ul>
-		<li>
-			<img src="person.gif"n alt="person 1 name" title="person 1 name" width="150" height="100" >
-			<h6>Lecture title</h6>
-			<h6>Lecturer name</h6>
-			<p>short introduction for lecture.</p>
-		</li>
-		<li>
-			<img src="person.gif"n alt="person 2 name" title="person 2 name" width="150" height="100" >
-			<h6>Lecture title</h6>
-			<h6>Lecturer name</h6>
-			<p>short introduction for lecture.</p>
-		</li>
-		<li>
-			<img src="person.gif"n alt="person 3 name" title="person 3 name" width="150" height="100" >
-			<h6>Lecture title</h6>
-			<h6>Lecturer name</h6>
-			<p>short introduction for lecture.</p>
-		</li>
-		<li>
-			<img src="person.gif"n alt="person 4 name" title="person 1 name" width="150" height="100" >
-			<h6>Lecture title</h6>
-			<h6>Lecturer name</h6>
-			<p>short introduction for lecture.</p>
-		</li>
-		<li>
-			<img src="person.gif"n alt="person 5 name" title="person 5 name" width="150" height="100" >
-			<h6>Lecture title</h6>
-			<h6>Lecturer name</h6>
-			<p>short introduction for lecture.</p>	
-		</li>
-		<li>
-			<img src="person.gif"n alt="person 6 name" title="person 6 name" width="150" height="100" >
-			<h6>Lecture title</h6>
-			<h6>Lecturer name</h6>
-			<p>short introduction for lecture.</p>	
-		</li>
-	</ul>
-	
-	<h5>Where to park? <span>and other important information...</span></h5>
+			<br>
 
-	<p>The function will be held at the 'Sublime Club'</p>
+			<ul>
+				<li>
+					<img src="person.gif"n alt="person 1 name" title="person 1 name" width="150" height="100" >
+					<h4>Lecture title</h4>
+					<h4>Lecturer name</h4>
+					<p>short introduction for lecture.</p>
+				</li>
+				<li>
+					<img src="person.gif"n alt="person 2 name" title="person 2 name" width="150" height="100" >
+					<h4>Lecture title</h4>
+					<h4>Lecturer name</h4>
+					<p>short introduction for lecture.</p>
+				</li>
+				<li>
+					<img src="person.gif"n alt="person 3 name" title="person 3 name" width="150" height="100" >
+					<h4>Lecture title</h4>
+					<h4>Lecturer name</h4>
+					<p>short introduction for lecture.</p>
+				</li>
+				<li>
+					<img src="person.gif"n alt="person 4 name" title="person 1 name" width="150" height="100" >
+					<h4>Lecture title</h4>
+					<h4>Lecturer name</h4>
+					<p>short introduction for lecture.</p>
+				</li>
+				<li>
+					<img src="person.gif"n alt="person 5 name" title="person 5 name" width="150" height="100" >
+					<h4>Lecture title</h4>
+					<h4>Lecturer name</h4>
+					<p>short introduction for lecture.</p>	
+				</li>
+				<li>
+					<img src="person.gif"n alt="person 6 name" title="person 6 name" width="150" height="100" >
+					<h4>Lecture title</h4>
+					<h4>Lecturer name</h4>
+					<p>short introduction for lecture.</p>	
+				</li>
+			</ul>
+		</section>
+		
+		<section>
+			<h3>Where to park? <span>and other important information...</span></h3>
 
-	<p>Arrival at 18:30</p>
+			<p>The function will be held at the 'Sublime Club'</p>
 
-	<p>Starts at 19:00</p>
+			<p>Arrival at 18:30</p>
 
-	<h6>Parking</h6>
-	<ol>
-		<li>Eli Pelet parking lot</li>
-		<li>Elpasi St.</li>
-		<li>Haim ben Atar St.</li>
-	</ol>
+			<p>Starts at 19:00</p>
 
-	<h6>Buses</h6>
-	<ol>
-		<li>From the train station: 141, 42</li>
-		<li>From the central station: 163, 201, 96</li>
-	</ol>
+			<h4>Parking</h4>
+			<ol>
+				<li>Eli Pelet parking lot</li>
+				<li>Elpasi St.</li>
+				<li>Haim ben Atar St.</li>
+			</ol>
 
-	
-	<!-- added later in class, after we learned about forms -->
-	<h6>Sign up</h6>
-	<p>Entrance is free, but the number of attendants is limited</p>
+			<h4>Buses</h4>
+			<ol>
+				<li>From the train station: 141, 42</li>
+				<li>From the central station: 163, 201, 96</li>
+			</ol>
+		</section>
 
-	<form action="https://google.com">
-		<div>
-			<label for="full_name">Full Name</label>		
-			<input type="text" name="full_name" id="full_name" placeholder="first and last name">
-		</div>
+		<section>
+			<!-- added later in class, after we learned about forms -->
+			<h3>Sign up</h3>
+			<p>Entrance is free, but the number of attendants is limited</p>
 
-		<div>
-			<label for="job_title">Job Title</label>		
-			<input type="text" name="job_title" id="job_title" placeholder="What you do">
-		</div>
+			<form action="https://google.com">
+				<div>
+					<label for="full_name">Full Name</label>		
+					<input type="text" name="full_name" id="full_name" placeholder="first and last name">
+				</div>
 
-		<div>
-			<label for="organization">Organization</label>		
-			<input type="text" name="organization" id="organization" placeholder="who pays your salary">
-		</div>
+				<div>
+					<label for="job_title">Job Title</label>		
+					<input type="text" name="job_title" id="job_title" placeholder="What you do">
+				</div>
 
-		<div>
-			<label for="telephone">Telephone Number</label>		
-			<input type="text" name="telephone" id="telephone" placeholder="or cell number">
-		</div>
+				<div>
+					<label for="organization">Organization</label>		
+					<input type="text" name="organization" id="organization" placeholder="who pays your salary">
+				</div>
 
-		<div>
-			<label for="friends">Any Friends</label>		
-			<input type="text" name="friends" id="friends" placeholder="first and last name">
-		</div>
+				<div>
+					<label for="telephone">Telephone Number</label>		
+					<input type="text" name="telephone" id="telephone" placeholder="or cell number">
+				</div>
 
-		<button type="submit">Finished! Send me</button>
+				<div>
+					<label for="friends">Any Friends</label>		
+					<input type="text" name="friends" id="friends" placeholder="first and last name">
+				</div>
 
-	</form>
+				<button type="submit">Finished! Send me</button>
+			</form>	
+		</section>
+		
+	</main>
 
+	<article>
+		<h3>Useful Information</h3>
+		<ul>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+			<li>
+				<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
+				<h4>Course title</h4>
+				<p>short introduction to the course.</p>
+			</li>
+		</ul>
+	</article>
 
-	<h5>Useful Information</h5>
-
-	<ul>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-		<li>
-			<img src="course.gif" width="50" height="50" alt="course picture" title="course picture">
-			<h6>Course title</h6>
-			<p>shrot introduction to the course.</p>
-		</li>
-	</ul>
-
-	<h5>About us</h5>
-	
-	<ul>
-		<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
-		<li>
-			<h6>Netcraft</h6>
-			<p>A summary about Netcraft as a company.</p>
-		</li>
-		<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
-		<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
-		<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
-		<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
-	</ul>
-	
-
+	<footer>
+		<h3>About us</h3>
+		
+		<ul>
+			<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
+			<li>
+				<h4>Netcraft</h4>
+				<p>A summary about Netcraft as a company.</p>
+			</li>
+			<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
+			<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
+			<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
+			<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
+		</ul>
+		
+		<ul>
+			<li>All rights reserved &copy; Netcraft</li>
+			<li>Call us: 987455698</li>
+			<li>Come vist us at Tapuz building at 30 Ben Gurion St. first floor</li>
+			<li>info@netcraft.com</li>
+		</ul>
+	</footer>
 	
 
 
