--- a/exercises/DevShots/index.html
+++ b/exercises/DevShots/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<head></head>
-
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>DevShots</title>
+</head>
 <body>
-	
-
 	<header>
 		<h1>DEV SHOTS</h1>
 		<img src="logo.gif" alt="netcraft logo" title="netcraft logo" width="100" height="20">
@@ -36,37 +37,37 @@
 				<li>
 					<img src="person.gif"n alt="person 1 name" title="person 1 name" width="150" height="100" >
 					<h4>Lecture title</h4>
-					<h4>Lecturer name</h4>
+					<p>Lecturer name</p>
 					<p>short introduction for lecture.</p>
 				</li>
 				<li>
 					<img src="person.gif"n alt="person 2 name" title="person 2 name" width="150" height="100" >
 					<h4>Lecture title</h4>
-					<h4>Lecturer name</h4>
+					<p>Lecturer name</p>
 					<p>short introduction for lecture.</p>
 				</li>
 				<li>
 					<img src="person.gif"n alt="person 3 name" title="person 3 name" width="150" height="100" >
 					<h4>Lecture title</h4>
-					<h4>Lecturer name</h4>
+					<p>Lecturer name</p>
 					<p>short introduction for lecture.</p>
 				</li>
 				<li>
 					<img src="person.gif"n alt="person 4 name" title="person 1 name" width="150" height="100" >
 					<h4>Lecture title</h4>
-					<h4>Lecturer name</h4>
+					<p>Lecturer name</p>
 					<p>short introduction for lecture.</p>
 				</li>
 				<li>
 					<img src="person.gif"n alt="person 5 name" title="person 5 name" width="150" height="100" >
 					<h4>Lecture title</h4>
-					<h4>Lecturer name</h4>
+					<p>Lecturer name</p>
 					<p>short introduction for lecture.</p>	
 				</li>
 				<li>
 					<img src="person.gif"n alt="person 6 name" title="person 6 name" width="150" height="100" >
 					<h4>Lecture title</h4>
-					<h4>Lecturer name</h4>
+					<p>Lecturer name</p>
 					<p>short introduction for lecture.</p>	
 				</li>
 			</ul>
@@ -203,14 +204,15 @@
 			<li><img src="logo.gif" alt="logo" title="logo" width="100" height="20"></li>
 		</ul>
 		
-		<ul>
-			<li>All rights reserved &copy; Netcraft</li>
-			<li>Call us: 987455698</li>
-			<li>Come vist us at Tapuz building at 30 Ben Gurion St. first floor</li>
-			<li>info@netcraft.com</li>
-		</ul>
-	</footer>
-	
-
-
+		<address>
+			<ul>
+				<li>All rights reserved &copy; Netcraft</li>
+				<li>Call us: 987455698</li>
+				<li>Come vist us at Tapuz building at 30 Ben Gurion St. first floor</li>
+				<li>info@netcraft.com</li>
+			</ul>	
+		</address>
+		
+	</footer>	
 </body>
+</html>
